# remote-container-templates

./: .gitignore  LICENSE  README.md
docker_base/.devcontainer/: .env  Dockerfile  devcontainer.json  docker-compose.yml
docker_glfw/.devcontainer/: .env  Dockerfile  devcontainer.json  docker-compose.development.yml  docker-compose.yml
docker_pytorch/.devcontainer/: .env  Dockerfile  devcontainer.json  docker-compose.yml  pyproject.toml
docker_ximea/.devcontainer/: .env  Dockerfile  devcontainer.json  docker-compose.development.yml  docker-compose.yml  pyproject.toml
