[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python  = "^3.8"
numpy   = "^1.16.2"
#torch   = "^1.9.0"
# pillow may need additional lib files
#pillow  = "^6.1.0"
#plyfile = "^0.7.2"
#tqdm    = "^4.40.2"
plotly  = "^5.3.1"
#kaleido = "0.2.1"
opencv-python = "^4.1"
pyzmq    = "22.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
